--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 							<div class="text pl-3">
 								<span class="date">June 2022 - Aug 2022</span>
 								<h2>Aerial Delivery Research and Development Establishment (ADRDE)</h2>
-								<span class="position">Android Developer</span>
+								<span class="position">Android Developer Intern</span>
 								<p>Worked as an android developer individually to develop and deploy an application for complaint management with firebase authentication and realtime database, with 3 roles users, engineers and technicians. 
 									The developed application helps engineers and technicians to manage all the complaints and simplifies the tracking of the complaint by assigning it to a suitable technician. </p>
 							</div>
