--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
 				</div>
 				<div class="col-md-6 d-flex avatar-container ftco-animate">
 					<a href="#social-links" class="follow-me">Follow Me</a>
-					<div class="img avatar" style="background-image: url('images/contact.svg');"></div>
+					<div class="img avatar" style="background-image: url('images/okay.gif');"></div>
 				</div>
 			</div>
 		</div>
