--- a/index.html
+++ b/index.html
@@ -399,6 +399,16 @@
 						<h2 class="heading">Certification</h2>
 						
 						<div class="resume-wrap d-flex ftco-animate" data-animate-effect="fadeInRight">
+							<div class="icon d-flex align-items-center justify-content-center"  style="background:white;background-image: url('images/aws.png');background-size:cover;width: 60px;height: 60px;border-radius: 0;">
+							</div>
+							<div class="text pl-3">
+								<span class="date">8<sup>th</sup>February,2023</span>
+								<h2>AWS Certified Cloud Practitioner</h2>
+								<span class="position">Amazon Web Services</span>
+								<p>Achieved Certification in AWS Certified Cloud Practitioner from Amazon Web Services(AWS).</p>
+							</div>
+						</div>
+						<div class="resume-wrap d-flex ftco-animate" data-animate-effect="fadeInRight">
 							<div class="icon d-flex align-items-center justify-content-center"  style="background:white;background-image: url('images/android.png');background-size:cover;width: 60px;height: 60px;border-radius: 0;">
 							</div>
 							<div class="text pl-3">
